<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    >
    <PreferenceCategory android:title="@string/preferenceTitle">
        <ListPreference
            android:key="operationMode"
            android:title="@string/operationMode_title"
            android:summary="@string/operationMode_summary"
            android:dialogTitle="@string/operationMode_title"
            android:entries="@array/operationMode_entries"
            android:entryValues="@array/operationMode_entryvalues" />
        <EditTextPreference
            android:key="volumeOffsetA"
            android:title="@string/thresholdVolumeOffsetATitle"
            android:summary="@string/thresholdVolumeOffsetSummary"
            android:dialogTitle="@string/thresholdVolumeOffsetATitle"
            android:inputType="number"
            android:defaultValue="1"
        />
        <EditTextPreference
            android:key="volumeOffsetB"
            android:title="@string/thresholdVolumeOffsetBTitle"
            android:summary="@string/thresholdVolumeOffsetSummary"
            android:dialogTitle="@string/thresholdVolumeOffsetBTitle"
            android:inputType="number"
            android:defaultValue="1"
        />
        <EditTextPreference
            android:key="taikoOnThreshold"
            android:title="@string/taikoOnThresholdTitle"
            android:summary="@string/taikoOnThresholdSummary"
            android:dialogTitle="@string/taikoOnThresholdTitle"
            android:inputType="number"
            android:defaultValue="10"
        />
    </PreferenceCategory>
    <PreferenceCategory android:title="@string/normalModeTitle">
        <EditTextPreference
            android:key="thresholdMoveLowerLimitA"
            android:title="@string/thresholdMoveLowerLimitATitle"
            android:summary="@string/thresholdMoveLowerLimitSummary"
            android:dialogTitle="@string/thresholdMoveLowerLimitATitle"
            android:inputType="number"
            android:defaultValue="170"
        />
        <EditTextPreference
            android:key="thresholdMoveLowerLimitB"
            android:title="@string/thresholdMoveLowerLimitBTitle"
            android:summary="@string/thresholdMoveLowerLimitSummary"
            android:dialogTitle="@string/thresholdMoveLowerLimitBTitle"
            android:inputType="number"
            android:defaultValue="125"
        />
        <EditTextPreference
            android:key="thresholdMoveUpperlimitAB"
            android:title="@string/thresholdMoveUpperlimitABTitle"
            android:summary="@string/thresholdMoveUpperlimitSummary"
            android:dialogTitle="@string/thresholdMoveUpperlimitABTitle"
            android:inputType="number"
            android:defaultValue="200"
        />
        <EditTextPreference
            android:key="movingResolution"
            android:title="@string/movingResolutionTitle"
            android:summary="@string/movingResolutionSummary"
            android:dialogTitle="@string/movingResolutionTitle"
            android:inputType="number"
            android:defaultValue="16"
        />
    </PreferenceCategory>
    <PreferenceCategory android:title="@string/demoModeTitle">
        <EditTextPreference
            android:key="playFileName"
            android:title="@string/musicFileTitle"
            android:summary="@string/musicFileSummary"
            android:dialogTitle="@string/musicFileTitle"
        />
        <EditTextPreference
            android:key="volumeRate"
            android:title="@string/thresholdVolumeRateTitle"
            android:summary="@string/thresholdVolumeRateSummary"
            android:dialogTitle="@string/thresholdVolumeRateTitle"
            android:inputType="number"
            android:defaultValue="1"
        />
        <EditTextPreference
            android:key="volumeCount"
            android:title="@string/thresholdVolumeCountTitle"
            android:summary="@string/thresholdVolumeCountSummary"
            android:dialogTitle="@string/thresholdVolumeCountTitle"
            android:inputType="number"
            android:defaultValue="1"
        />
    </PreferenceCategory>
    <PreferenceCategory android:title="@string/manualModeTitle">
        <CheckBoxPreference
            android:key="stopMotorWhenLose"
            android:title="@string/stopMotorWhenLoseTitle"
            android:summary="@string/stopMotorWhenLoseSummary"
        />
    </PreferenceCategory>
    <PreferenceCategory android:title="@string/sensor_ThresholdTitle">
        <EditTextPreference
            android:key="sensorAfallThreshold"
            android:title="@string/thresholdAFalldownTitle"
            android:summary="@string/thresholdFalldownSummary"
            android:dialogTitle="@string/thresholdAFalldownTitle"
            android:inputType="number"
            android:defaultValue="180"
        />
        <EditTextPreference
            android:key="sensorBfallThreshold"
            android:title="@string/thresholdBFalldownTitle"
            android:summary="@string/thresholdFalldownSummary"
            android:dialogTitle="@string/thresholdBFalldownTitle"
            android:inputType="number"
            android:defaultValue="180"
        />
    </PreferenceCategory>
    <PreferenceCategory android:title="@string/sensorA_UpperTitle">
        <EditTextPreference
            android:key="sensorA1Upper"
            android:title="@string/thresholdA1UpperTitle"
            android:summary="@string/thresholdUpperSummary"
            android:dialogTitle="@string/thresholdA1UpperTitle"
            android:inputType="number"
            android:defaultValue="600"
        />
        <EditTextPreference
            android:key="sensorA2Upper"
            android:title="@string/thresholdA2UpperTitle"
            android:summary="@string/thresholdUpperSummary"
            android:dialogTitle="@string/thresholdA2UpperTitle"
            android:inputType="number"
            android:defaultValue="600"
        />
        <EditTextPreference
            android:key="sensorA3Upper"
            android:title="@string/thresholdA3UpperTitle"
            android:summary="@string/thresholdUpperSummary"
            android:dialogTitle="@string/thresholdA3UpperTitle"
            android:inputType="number"
            android:defaultValue="600"
        />
        <EditTextPreference
            android:key="sensorA4Upper"
            android:title="@string/thresholdA4UpperTitle"
            android:summary="@string/thresholdUpperSummary"
            android:dialogTitle="@string/thresholdA4UpperTitle"
            android:inputType="number"
            android:defaultValue="0"
        />
    </PreferenceCategory>
    <PreferenceCategory android:title="@string/sensorA_LowerTitle">
        <EditTextPreference
            android:key="sensorA1Lower"
            android:title="@string/thresholdA1LowerTitle"
            android:summary="@string/thresholdLowerSummary"
            android:dialogTitle="@string/thresholdA1LowerTitle"
            android:inputType="number"
            android:defaultValue="0"
        />
        <EditTextPreference
            android:key="sensorA2Lower"
            android:title="@string/thresholdA2LowerTitle"
            android:summary="@string/thresholdLowerSummary"
            android:dialogTitle="@string/thresholdA2LowerTitle"
            android:inputType="number"
            android:defaultValue="0"
        />
        <EditTextPreference
            android:key="sensorA3Lower"
            android:title="@string/thresholdA3LowerTitle"
            android:summary="@string/thresholdLowerSummary"
            android:dialogTitle="@string/thresholdA3LowerTitle"
            android:inputType="number"
            android:defaultValue="0"
        />
        <EditTextPreference
            android:key="sensorA4Lower"
            android:title="@string/thresholdA4LowerTitle"
            android:summary="@string/thresholdLowerSummary"
            android:dialogTitle="@string/thresholdA4LowerTitle"
            android:inputType="number"
            android:defaultValue="0"
        />
     </PreferenceCategory>

    <PreferenceCategory android:title="@string/sensorB_UpperTitle">
        <EditTextPreference
            android:key="sensorB1Upper"
            android:title="@string/thresholdB1UpperTitle"
            android:summary="@string/thresholdUpperSummary"
            android:dialogTitle="@string/thresholdB1UpperTitle"
            android:inputType="number"
            android:defaultValue="600"
        />
        <EditTextPreference
            android:key="sensorB2Upper"
            android:title="@string/thresholdB2UpperTitle"
            android:summary="@string/thresholdUpperSummary"
            android:dialogTitle="@string/thresholdB2UpperTitle"
            android:inputType="number"
            android:defaultValue="600"
        />
        <EditTextPreference
            android:key="sensorB3Upper"
            android:title="@string/thresholdB3UpperTitle"
            android:summary="@string/thresholdUpperSummary"
            android:dialogTitle="@string/thresholdB3UpperTitle"
            android:inputType="number"
            android:defaultValue="600"
        />
        <EditTextPreference
            android:key="sensorB4Upper"
            android:title="@string/thresholdB4UpperTitle"
            android:summary="@string/thresholdUpperSummary"
            android:dialogTitle="@string/thresholdB4UpperTitle"
            android:inputType="number"
            android:defaultValue="0"
        />
     </PreferenceCategory>
    <PreferenceCategory android:title="@string/sensorB_LowerTitle">
        <EditTextPreference
            android:key="sensorB1Lower"
            android:title="@string/thresholdB1LowerTitle"
            android:summary="@string/thresholdLowerSummary"
            android:dialogTitle="@string/thresholdB1LowerTitle"
            android:inputType="number"
            android:defaultValue="0"
        />
        <EditTextPreference
            android:key="sensorB2Lower"
            android:title="@string/thresholdB2LowerTitle"
            android:summary="@string/thresholdLowerSummary"
            android:dialogTitle="@string/thresholdB2LowerTitle"
            android:inputType="number"
            android:defaultValue="0"
        />
        <EditTextPreference
            android:key="sensorB3Lower"
            android:title="@string/thresholdB3LowerTitle"
            android:summary="@string/thresholdLowerSummary"
            android:dialogTitle="@string/thresholdB3LowerTitle"
            android:inputType="number"
            android:defaultValue="0"
        />
        <EditTextPreference
            android:key="sensorB4Lower"
            android:title="@string/thresholdB4LowerTitle"
            android:summary="@string/thresholdLowerSummary"
            android:dialogTitle="@string/thresholdB4LowerTitle"
            android:inputType="number"
            android:defaultValue="0"
        />
    </PreferenceCategory>
</PreferenceScreen>
