<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="#004000"
    android:id="@+id/demoPlayView"
    >
    <TextView  
        android:id="@+id/SoundInfo"
        android:textSize="4pt"
        android:layout_width="wrap_content" 
        android:layout_height="wrap_content" 
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:text="@string/blank"
    />
<Button
       android:id="@+id/EMOButton2"
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       android:adjustViewBounds = "true"
       android:scaleType="fitCenter"
       android:textSize="8pt" 
       android:text="@string/EMO"
    android:layout_alignParentBottom="true"
    android:layout_alignParentLeft="true"
   />
<Button
       android:id="@+id/UnlatchButton"
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       android:adjustViewBounds = "true"
       android:scaleType="fitCenter"
       android:textSize="8pt" 
       android:text="@string/unlatch"
    android:layout_alignParentBottom="true"
    android:layout_alignParentRight="true"
   />
<jp.sourceforge.gokigen.psbf.GokigenSurfaceView
    android:id="@+id/GraphicView"
    android:layout_width="fill_parent" 
    android:layout_height="wrap_content" 
    android:layout_below="@id/SoundInfo"
    android:layout_above="@id/EMOButton2"
    />
</RelativeLayout>
